[package]
name = "swag_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.7", features = ["map_physical_memory"] }
volatile = "0.2.7"
spin = "0.9.5"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.26"
default-features = false
features = ["alloc"]


[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33     # (0x10 << 1) | 1
test-timeout = 300		# (in seconds)

# tests without harness (one test case)
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
